# phirepass-rs

./: .dockerignore  BACKPRESSURE_FIX.md  Cargo.toml  Makefile  PLAN.md  PROTOBUF_IMPLEMENTATION.md  PROTOBUF_INDEX.md  PROTOBUF_QUICKSTART.md  PROTOBUF_STATUS.md  PROTOBUF_SUMMARY.md  PROTOBUF_VS_MSGPACK.md  README.md  SFTP_GUI_GUIDE.md  TASKS.md  challenge.sh  cspell.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  commit.yml  daemon.yml  master.yml  publish.yml  release.yml  server.yml  tag.yml
agent/: Cargo.toml  Dockerfile
agent/sandbox/: Dockerfile
agent/src/: agent.rs  cli.rs  common.rs  creds.rs  env.rs  error.rs  http.rs  main.rs  session.rs  ws.rs
agent/src/sftp/: client.rs  connection.rs  mod.rs  session.rs
agent/src/sftp/actions/: delete.rs  download.rs  upload.rs
agent/src/ssh/: auth.rs  connection.rs  mod.rs  session.rs
channel/: Cargo.toml  build.rs
channel/public/: index.html  phirepass.css  phirepass.js  sftp.js  xterm.css
channel/src/: lib.rs
common/: Cargo.toml  build.rs
common/proto/: common.proto  frame.proto  node.proto  sftp.proto  web.proto
common/src/: env.rs  ip.rs  lib.rs  logger.rs  node.rs  protocol.rs  runtime.rs  server.rs  stats.rs  token.rs
common/src/protocol/: common.rs  conversions.rs  mod.rs  node.rs  sftp.rs  web.rs
console/: Cargo.toml  README.md  build.rs
console/public/: index.html  index.js
console/src/: lib.rs
daemon/: Cargo.toml  Dockerfile  Dockerfile.sandbox
daemon/sandbox/: Dockerfile
daemon/src/: cli.rs  common.rs  daemon.rs  env.rs  error.rs  http.rs  main.rs  session.rs  sftp.rs  sftp2.rs  ssh.rs  state.rs  ws.rs
daemon/src/sftp/: client.rs  connection.rs  mod.rs  session.rs
daemon/src/sftp/actions/: delete.rs  download.rs  list_dir.rs  mod.rs  upload.rs
daemon/src/ssh/: auth.rs  client.rs  connection.rs  session.rs
daemon/sshd/: Dockerfile  entrypoint.sh
relay/: Cargo.toml  Dockerfile
relay/src/: cli.rs  env.rs  main.rs  proxy.rs
relay/src/db/: redis.rs
server/: Cargo.toml  Dockerfile
server/migrations/: 0001_step1_nodes_claim.sql  0002_step1_pat_scope_support.sql  0003_step2_auth_challenges.sql  0004_drop_legacy_nodes_columns.sql  0005_add_nodes_name_column.sql
server/src/: cli.rs  connection.rs  db.rs  env.rs  error.rs  http.rs  main.rs  node.rs  node_auth.rs  server.rs  state.rs  stun.rs  tasks.rs  web.rs
server/src/db/: common.rs  mod.rs  postgres.rs  redis.rs
web/: Cargo.toml
web/src/: main.rs
web/static/: index.html  xterm-addon-fit.js
