[package]
name = "phirepass"
version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["daemon", "common", "server", "web"]

[workspace.package]
version = "0.1.21"
edition = "2024"

[[bin]]
name = "server"
path = "server/src/main.rs"

[[bin]]
name = "daemon"
path = "daemon/src/main.rs"

[[bin]]
name = "web"
path = "web/src/main.rs"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
phirepass-common = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
ulid = { workspace = true }
serde = { workspace = true }
russh = { workspace = true }
clap = { workspace = true }
envconfig = { workspace = true }
axum-client-ip = { workspace = true }
comfy-table = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
tower-http = { workspace = true }

[workspace.dependencies]
russh = { version =  "0.55.0" }
tokio = { version = "1.48.0", features = ["full"]}
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
axum = { version = "0.8.7", features = ["ws"]}
anyhow = "1.0.100"
env_logger = "0.11.8"
log = "0.4.29"
ulid = "1.2.1"
rmp-serde = "1.3.0"
futures-util = "0.3.31"
clap = { version = "4.5.53", features = ["derive"] }
phirepass-common = { path = "common" }
envconfig = "0.11.1"
axum-client-ip = { version = "1.1.3", features = ["serde", "forwarded-header"] }
comfy-table = "7.2.1"
rustls = { version = "0.23.35", features = ["ring"] }
tower-http = { version = "0.6.8", features = ["cors"]}
