[package]
name = "phirepass-channel"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.106"
serde-wasm-bindgen = "0.6.5"
gloo-timers = "0.3.0"
web-sys = { version = "0.3.83", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "CloseEvent",
    "WebSocket",
]}

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory"]
