[package]
name = "phirepass-common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = "0.37.2"
get_if_addrs = "0.5.3"
env_logger = { workspace = true }
thread-count = "0.3.1"
rmp-serde = { workspace = true }
anyhow = { workspace = true }
os_info = "3"
