[package]
name = "phirepass-common"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sysinfo = { version = "0.37.2", optional = true}
get_if_addrs = { version = "0.5.3", optional = true }
env_logger = { workspace = true }
thread-count = { version = "0.3.1", optional = true }
anyhow = { workspace = true, optional = true }
os_info = { version = "3.14.0", optional = true }
libc = { version = "0.2.178", optional = true }
netstat2 = { version = "0.11.2", optional = true }
mac_address = { version = "1.1.8", optional = true }
axum = { workspace = true, optional = true }
russh-sftp = "2.1.1"
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[features]
full = ["env", "ip", "logger", "node", "protocol", "stats", "time"]
env = []
ip = ["dep:axum"]
logger = ["dep:serde", "stats"]
node = ["dep:serde", "stats"]
protocol = ["dep:anyhow", "dep:serde", "dep:serde_json"]
stats = [
    "dep:get_if_addrs",
    "dep:mac_address",
    "dep:netstat2",
    "dep:os_info",
    "dep:serde",
    "dep:sysinfo",
    "dep:thread-count",
    "dep:libc"
]
time = []
