[package]
name = "phirepass-common"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rmp-serde = { workspace = true, optional = true }
sysinfo = { version = "0.37.2", optional = true}
get_if_addrs = { version = "0.5.3", optional = true }
env_logger = { workspace = true }
thread-count = { version = "0.3.1", optional = true }
anyhow = { workspace = true, optional = true }
os_info = { version = "3.14.0", optional = true }
libc = { version = "0.2.178", optional = true }
netstat2 = { version = "0.11.2", optional = true }
mac_address = { version = "1.1.8", optional = true }
axum = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
tokio ={ workspace = true, optional = true }

[features]
full = ["env", "ip", "logger", "node", "protocol", "stats", "time", "runtime"]
env = []
ip = ["dep:axum"]
logger = ["dep:serde", "stats"]
node = ["dep:serde", "dep:ulid", "stats"]
runtime = ["dep:tokio"]
protocol = ["dep:anyhow", "dep:serde", "dep:serde_json", "dep:rmp-serde", "dep:bytes"]
stats = [
    "dep:get_if_addrs",
    "dep:mac_address",
    "dep:netstat2",
    "dep:os_info",
    "dep:serde",
    "dep:sysinfo",
    "dep:thread-count",
    "dep:libc"
]
time = []
