[package]
name = "phirepass-daemon"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[dependencies]
env_logger = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
phirepass-common = { workspace = true, features = ["full"] }
log = { workspace = true }
tokio = { workspace = true }
russh = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
envconfig = { workspace = true }
axum = { workspace = true }
axum-client-ip = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
russh-sftp = { workspace = true }
