[package]
name = "phirepass-server"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }

[dependencies]
ulid = { workspace = true }
rmp-serde = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
phirepass-common = { workspace = true }
log = { workspace = true }
envconfig = { workspace = true }
axum-client-ip = { workspace = true }
rustls = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }
